--- a/theme/static/css/screen.css
+++ b/theme/static/css/screen.css
@@ -407,3 +407,22 @@ height: inherit;
 .entry-content {
 margin-bottom: 20px;
 }
+
+.backToTop {
+display: none;
+width: 18px;
+line-height: 1.2;
+padding: 5px 0;
+background-color: #000;
+color: #fff;
+font-size: 12px;
+text-align: center;
+position: fixed;
+_position: absolute;
+right: 10px;
+bottom: 130px;
+_bottom: "auto";
+cursor: pointer;
+opacity: .6;
+filter: Alpha(opacity=60);
+}
