--- a/theme/static/css/screen.css
+++ b/theme/static/css/screen.css
@@ -55,6 +55,26 @@ table {
     border-collapse: collapse;
     border-spacing: 0;
 }
+.table-bordered {
+    border: 1px solid #ddd;
+    border-collapse: separate;
+    *border-collapse: collapse;
+    border-left: 0;
+    -webkit-border-radius: 4px;
+    -moz-border-radius: 4px;
+    border-radius: 4px;
+}
+.table-bordered th, .table-bordered td {
+    border-left: 1px solid #ddd;
+}
+
+.table th, .table td {
+    padding: 8px;
+    line-height: 20px;
+    text-align: left;
+    vertical-align: top;
+    border-top: 1px solid #ddd;
+}
 
 body {
     font-family: Georgia, serif;
