--- a/theme/static/css/screen.css
+++ b/theme/static/css/screen.css
@@ -67,13 +67,15 @@ table {
 .table-bordered th, .table-bordered td {
     border-left: 1px solid #ddd;
 }
+.table-bordered td {
+    border-top: 1px solid #ddd;
+}
 
 .table th, .table td {
     padding: 8px;
     line-height: 20px;
     text-align: left;
     vertical-align: top;
-    border-top: 1px solid #ddd;
 }
 
 body {
