--- a/theme/css/screen.css
+++ b/theme/css/screen.css
@@ -67,18 +67,20 @@ table {
 .table-bordered th, .table-bordered td {
     border-left: 1px solid #ddd;
 }
+.table-bordered td {
+    border-top: 1px solid #ddd;
+}
 
 .table th, .table td {
     padding: 8px;
     line-height: 20px;
     text-align: left;
     vertical-align: top;
-    border-top: 1px solid #ddd;
 }
 
 body {
     font-family: Georgia, serif;
-    font-size: 16px;
+    font-size: 18px;
     line-height: 1.5em;
     color: #444;
 }
@@ -159,6 +161,7 @@ blockquote {
 
 .post {
     margin: 0 0 4.5em 150px;
+    line-height: 1.6;
 }
 .post.archives {
     margin-bottom: 1.5em;
@@ -220,8 +223,8 @@ sub {
 
 .post pre, .page pre {
     padding: .8em;
-    font-size: 12px;
-    font-family: Monospace;
+    font-size: 16px;
+    font-family: Monaco,Menlo,Consolas,"Courier New",monospace;
     line-height: 1.1em;
     overflow: auto;
 }
