--- a/theme/static/css/screen.css
+++ b/theme/static/css/screen.css
@@ -80,7 +80,7 @@ table {
 
 body {
     font-family: Georgia, serif;
-    font-size: 18px;
+    font-size: 16px;
     line-height: 1.5em;
     color: #444;
 }
@@ -160,6 +160,7 @@ blockquote {
 }
 
 .post {
+    font-family: "Helvetica Neue", Helvetica, "Segoe UI", Arial, freesans, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
     margin: 0 0 4.5em 150px;
     line-height: 1.6;
 }
@@ -223,7 +224,7 @@ sub {
 
 .post pre, .page pre {
     padding: .8em;
-    font-size: 16px;
+    font-size: 15px;
     font-family: Monaco,Menlo,Consolas,"Courier New",monospace;
     line-height: 1.1em;
     overflow: auto;
